# povray_utilities

./: README.md
file_generator/: CMakeLists.txt  model.pov
file_generator/include/: aliases.h  type_definition.h  utilities.hpp
file_generator/main/: povray_file_generator.cpp
file_generator/src/: utilities.cpp
